Fixed "Settings & Import" Button covering bottom calendar if window is too small

--- a/css/app/calendarlist.scss
+++ b/css/app/calendarlist.scss
@@ -320,7 +320,7 @@ $color-border: nc-darken($color-main-background, 8%) !default;
 }
 
 ul#calendarlistcontainer {
-	padding-bottom: 44px;
+	margin-bottom: 44px;
 }
 
 #datepicker-ng-show-container {
